fix navbar collapsing

--- a/src/css/global/navbar.scss
+++ b/src/css/global/navbar.scss
@@ -60,7 +60,7 @@
     }
   }
 
-  @media (max-width: 992px) {
+  @media (max-width: 991px) {
     .nav li .nav-link {
       padding: 15px;
       margin: 0;
